syntax = "proto3";
package bnbchain.greenfield.sp;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/bnb-chain/greenfield/x/challenge/types";

message EventStartChallenge {
  uint64 challenge_id = 1;
  string sp_operator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 object_id = 3;
  uint32 index = 4;
}

message EventCompleteChallenge {
  uint64 challenge_id = 1;
  uint32 result = 2;
  string sp_operator_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string slash_amount = 4;
  string challenger_address = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string challenger_reward_amount = 6;
  string submitter_address = 7 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string submitter_reward_amount = 8;
  repeated string validator_addresses = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_reward_amount = 10;
}

message EventExpireChallenge {
  uint64 challenge_id = 1;
}